# noaa-climatology-pipeline

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  PLAN_PIPELINE.md  README.md  RUNBOOK.md  SLA.md  ruff.toml
ingestion/: Dockerfile  README.md  pyproject.toml
ingestion/backfill/: load_historical.py  load_stations.py  verify_backfill.py
ingestion/producer/: config.py  noaa_producer.py  rate_limiter.py
ingestion/tests/: test_rate_limiter.py
orchestration/: pyproject.toml
orchestration/noaa_dagster/: definitions.py
orchestration/noaa_dagster/assets/: backfill.py  dbt_assets.py  kafka_topics.py  lifecycle.py  monitoring.py
orchestration/noaa_dagster/jobs/: backup_job.py  retention_job.py  transform_job.py
orchestration/noaa_dagster/resources/: backup.py  clickhouse.py  dbt.py  kafka.py
orchestration/noaa_dagster/sensors/: freshness_sensor.py  kafka_lag_sensor.py
playground/: pyproject.toml
playground/app/: clickhouse_client.py  main.py  models.py  query_loader.py
playground/app/static/css/: main.css
playground/app/static/js/: editor.js
playground/app/templates/: base.html  index.html
playground/app/templates/partials/: editor_content.html  (+1 more)
playground/queries/analytics/: best_holiday_conditions.yaml  climate_decade_comparison.yaml  coldest_stations.yaml  extreme_weather_events.yaml  global_temperature_trend.yaml  highest_temp_world.yaml  hottest_areas_australia.yaml  most_rainy_stations.yaml  precipitation_by_country.yaml  snow_coverage_by_year.yaml  stations_by_country_count.yaml  top_hottest_stations.yaml  warmest_years_globally.yaml  weather_type_distribution.yaml
playground/queries/benchmarks/: columns_size_codec_detail.yaml  parts_per_year.yaml  query_performance_comparison.yaml  table_size_codec_v1.yaml
playground/queries/ops/: count_all_rows.yaml  ingestion_speed_recent.yaml  kafka_consumers_status.yaml  min_max_boundaries.yaml  show_tables.yaml  stations_no_precipitation.yaml  system_merges.yaml
transform/: dbt_project.yml  profiles.yml.example  pyproject.toml
transform/macros/: generate_schema_name.sql
transform/models/marts/: _models.yml  mart_extreme_weather_events.sql  mart_global_temperature_yearly.sql  mart_ingestion_metrics.sql  mart_precipitation_by_country.sql  mart_top_hottest_stations.sql
transform/models/staging/: _models.yml  _sources.yml  stg_noaa__observations.sql  stg_noaa__stations.sql
transform/tests/singular/: assert_no_future_dates.sql  assert_no_orphan_stations.sql  assert_temp_in_valid_range.sql
(+29 files in other folders)
