[project]
name = "noaa-dagster"
version = "0.1.0"
description = "Dagster orchestration for NOAA climatology pipeline"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.9.0",
    "dagster-webserver>=1.9.0",
    "dagster-dbt>=0.25.0",
    "dbt-core>=1.8.0,<2.0.0",
    "dbt-clickhouse>=1.8.0",
    "clickhouse-connect>=0.7.0",
    "confluent-kafka>=2.3.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.wheel]
sources = []
